--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <p style="margin-top:10px">Today VATHSALYAM is located at Krishnancoil Street, Keralapuram, Kanyakumari District, serving 35 students with 4 Special Educators, a Principal, Coordinator and 3 support staff.</p>
       </div>
       <div class="about-img">
-        <img src="images/about.jpg" alt="About Vathsalyam">
+        <img src="images/about.avif" alt="About Vathsalyam">
       </div>
     </div>
   </div>
@@ -221,7 +221,7 @@
 
     <!-- 2 -->
     <article class="service-card" data-anim="right">
-      <div class="service-thumb"><img src="images/service2.jpg" alt="Vocational Training"></div>
+      <div class="service-thumb"><img src="images/service2.jpeg" alt="Vocational Training"></div>
       <div class="service-body">
         <h4>VOCATIONAL TRAINING</h4>
         <p>Vocational Training Centre are designed to enable a differently abled person to secure and retain suitable employment.</p>
@@ -239,7 +239,7 @@
 
     <!-- 4 -->
     <article class="service-card" data-anim="right">
-      <div class="service-thumb"><img src="images/service4.jpg" alt="Occupational Therapy"></div>
+      <div class="service-thumb"><img src="images/service4.jpeg" alt="Occupational Therapy"></div>
       <div class="service-body">
         <h4>OCCUPATIONAL THERAPY</h4>
         <p>Occupational therapy helps students increase functional independence in daily life; periodic assessments are conducted by therapists.</p>
@@ -248,7 +248,7 @@
 
     <!-- 5 -->
     <article class="service-card" data-anim="left">
-      <div class="service-thumb"><img src="images/service5.jpg" alt="Physio Therapy"></div>
+      <div class="service-thumb"><img src="images/service5.jpeg" alt="Physio Therapy"></div>
       <div class="service-body">
         <h4>PHYSIO THERAPY</h4>
         <p>The main aim is to reduce physical deformities and increase mobility. Children are encouraged and parents are happy with the progress.</p>
@@ -257,7 +257,7 @@
 
     <!-- 6 -->
     <article class="service-card" data-anim="right">
-      <div class="service-thumb"><img src="images/service6.jpg" alt="Speech Therapy"></div>
+      <div class="service-thumb"><img src="images/service6.jpeg" alt="Speech Therapy"></div>
       <div class="service-body">
         <h4>SPEECH THERAPY</h4>
         <p>Speech therapy is an important part of intervention for cognitive and social development in children with developmental disabilities.</p>
@@ -414,3 +414,4 @@
 
 </body>
 </html>
+
