--- a/index.html
+++ b/index.html
@@ -25,39 +25,35 @@
   /* WRAPPER */
   .wrap{max-width:1100px;margin:0 auto;padding:0 18px}
 
-  /* HEADER */
-  header.site-header{
-    background: linear-gradient(90deg,var(--saffron-1),var(--saffron-2));
-    color:white;
-    position:sticky;top:0;z-index:999;
-    padding:12px 0;
-  }
-  .topbar{display:flex;align-items:center;gap:16px;justify-content:space-between}
-  .brand-left{display:flex;align-items:center;gap:12px}
-  .logo-oval{
-    width:80px;height:80px;border-radius:50%;overflow:hidden;background:#fff;display:flex;align-items:center;justify-content:center;padding:6px;box-shadow:0 6px 18px rgba(0,0,0,0.12)
-  }
-  .logo-oval img{width:100%;height:100%;object-fit:contain;border-radius:50%}
-  .brand-text{line-height:1}
-  .brand-text .title{font-family: 'Merriweather',serif; font-weight:800; font-size:1.6rem; color:#fff; letter-spacing:0.6px}
-  .brand-text .small{font-size:0.95rem;color:rgba(255,255,255,0.95);margin-top:4px}
-  .brand-text .tiny{font-size:0.85rem;color:rgba(255,255,255,0.92);font-style:italic}
+ <!-- ===== HEADER START ===== -->
+<header style="background: linear-gradient(90deg, #ff9933, #ffffff, #138808); padding: 10px 0; position: sticky; top: 0; z-index: 999;">
+  <div style="max-width: 1200px; margin: auto; display: flex; align-items: center; justify-content: space-between;">
+    
+    <!-- Logo -->
+    <div style="display: flex; align-items: center; gap: 15px;">
+      <img src="images/logo.jpg" alt="Vathsalyam Logo" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid #fff; box-shadow: 0px 2px 6px rgba(0,0,0,0.3);">
+      <div style="line-height: 1.1;">
+        <h1 style="font-size: 2.8rem; margin: 0; font-weight: 800; color: #000;">VATHSALYAM</h1>
+        <p style="font-size: 1.4rem; margin: 2px 0; font-weight: 600; color: #444;">Special School for Intellectual Childrens</p>
+        <span style="font-size: 1rem; font-style: italic; color: #555;">A Special Project of Sevabharathi</span>
+      </div>
+    </div>
 
-  /* NAV */
-  nav.main-nav{display:flex;align-items:center;gap:14px}
-  nav.main-nav a{color:white;font-weight:600;padding:8px 10px;border-radius:8px}
-  nav.main-nav a:hover{background:rgba(0,0,0,0.08)}
+    <!-- Navigation -->
+    <nav>
+      <ul style="list-style: none; display: flex; gap: 20px; margin: 0; padding: 0; font-weight: 600;">
+        <li><a href="#about" style="text-decoration: none; color: #000;">About</a></li>
+        <li><a href="#vision-mission" style="text-decoration: none; color: #000;">Vision & Mission</a></li>
+        <li><a href="#services" style="text-decoration: none; color: #000;">Services</a></li>
+        <li><a href="#events" style="text-decoration: none; color: #000;">Events</a></li>
+        <li><a href="#gallery" style="text-decoration: none; color: #000;">Gallery</a></li>
+        <li><a href="#contact" style="text-decoration: none; color: #000;">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+<!-- ===== HEADER END ===== -->
 
-  /* hamburger */
-  .hamburger{display:none;cursor:pointer;width:40px;height:40px;align-items:center;justify-content:center}
-  .hamburger span{display:block;height:3px;width:22px;background:white;margin:4px 0;border-radius:2px}
-
-  @media (max-width:820px){
-    nav.main-nav{display:none;position:absolute;top:74px;right:18px;background:linear-gradient(90deg,var(--saffron-1),var(--saffron-2));padding:12px;border-radius:10px;box-shadow:0 8px 30px rgba(0,0,0,0.15)}
-    nav.main-nav.show{display:flex;flex-direction:column;min-width:160px}
-    .hamburger{display:flex}
-    .brand-text .title{font-size:1.2rem}
-  }
 
   /* SECTIONS */
   section{padding:48px 0}
@@ -414,4 +410,5 @@
 
 </body>
 </html>
+
 
