--- a/index.html
+++ b/index.html
@@ -1,154 +1,77 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>VATHSALYAM — Special School for Intellectual Children</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VATHSALYAM - Sevabharathi's Special Project</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
 
-<style>
-  :root{
-    --saffron-1:#ff9d3b;
-    --saffron-2:#f36b21;
-    --muted:#f6f8fb;
-    --card:#ffffff;
-    --text:#0f1724;
-    --sub:#4b5563;
-    --accent:#0b5a3b;
-    --radius:12px;
-  }
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      background: linear-gradient(to right, #FF9933, #FFFFFF, #138808);
+      padding: 20px 50px;
+      color: #000;
+    }
 
-  /* RESET */
-  *{box-sizing:border-box;margin:0;padding:0}
-  html,body{height:100%}
-  body{font-family:Inter, system-ui, Arial, sans-serif; background:var(--muted); color:var(--text); -webkit-font-smoothing:antialiased}
+    .logo {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      overflow: hidden;
+      margin-right: 20px;
+      flex-shrink: 0;
+      border: 3px solid #000;
+      background: #fff;
+    }
 
-  /* WRAPPER */
-  .wrap{max-width:1100px;margin:0 auto;padding:0 18px}
+    .logo img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
- <!-- ===== HEADER START ===== -->
-<header style="background: linear-gradient(90deg, #ff9933, #ffffff, #138808); padding: 10px 0; position: sticky; top: 0; z-index: 999;">
-  <div style="max-width: 1200px; margin: auto; display: flex; align-items: center; justify-content: space-between;">
-    
-    <!-- Logo -->
-    <div style="display: flex; align-items: center; gap: 15px;">
-      <img src="images/logo.jpg" alt="Vathsalyam Logo" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid #fff; box-shadow: 0px 2px 6px rgba(0,0,0,0.3);">
-      <div style="line-height: 1.1;">
-        <h1 style="font-size: 2.8rem; margin: 0; font-weight: 800; color: #000;">VATHSALYAM</h1>
-        <p style="font-size: 1.4rem; margin: 2px 0; font-weight: 600; color: #444;">Special School for Intellectual Childrens</p>
-        <span style="font-size: 1rem; font-style: italic; color: #555;">A Special Project of Sevabharathi</span>
-      </div>
-    </div>
+    .header-text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
 
-    <!-- Navigation -->
-    <nav>
-      <ul style="list-style: none; display: flex; gap: 20px; margin: 0; padding: 0; font-weight: 600;">
-        <li><a href="#about" style="text-decoration: none; color: #000;">About</a></li>
-        <li><a href="#vision-mission" style="text-decoration: none; color: #000;">Vision & Mission</a></li>
-        <li><a href="#services" style="text-decoration: none; color: #000;">Services</a></li>
-        <li><a href="#events" style="text-decoration: none; color: #000;">Events</a></li>
-        <li><a href="#gallery" style="text-decoration: none; color: #000;">Gallery</a></li>
-        <li><a href="#contact" style="text-decoration: none; color: #000;">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-<!-- ===== HEADER END ===== -->
+    .school-name {
+      font-size: 3rem;
+      font-weight: bold;
+      margin: 0;
+    }
 
+    .tagline {
+      font-size: 1.8rem;
+      margin: 5px 0;
+    }
 
-  /* SECTIONS */
-  section{padding:48px 0}
-  .section-title{color:var(--saffron-2);font-size:1.9rem;margin-bottom:14px}
-
-  /* ABOUT */
-  .about{background:white;border-radius:12px;padding:22px;box-shadow:0 10px 30px rgba(15,23,36,0.04)}
-  .about-grid{display:grid;grid-template-columns:1fr 1fr;gap:20px;align-items:center}
-  .about-text p{color:var(--sub);line-height:1.6}
-  .about-img img{width:100%;height:340px;object-fit:cover;border-radius:10px;box-shadow:0 8px 20px rgba(0,0,0,0.08)}
-
-  @media (max-width:880px){ .about-grid{grid-template-columns:1fr} .about-img img{height:260px} }
-
-  /* VISION / MISSION floating */
-  .vm-wrap{display:flex;gap:20px;flex-wrap:wrap;justify-content:center}
-  .vm-card{background:linear-gradient(180deg,#fff,#fff);border-radius:12px;padding:28px;width:100%;max-width:520px;text-align:center;box-shadow:0 10px 30px rgba(15,23,36,0.06);transform:translateY(0);transition:transform .4s ease, box-shadow .3s ease}
-  .vm-card:hover{transform:translateY(-12px);box-shadow:0 18px 40px rgba(15,23,36,0.12)}
-  .vm-card h3{color:var(--saffron-2);margin-bottom:10px}
-  .vm-float{animation:floaty 6s ease-in-out infinite}
-  @keyframes floaty{0%{transform:translateY(0)}50%{transform:translateY(-8px)}100%{transform:translateY(0)}}
-
-  /* SERVICES */
-  .services-grid{display:grid;grid-template-columns:repeat(2,1fr);gap:20px;align-items:start}
-  @media (max-width:880px){ .services-grid{grid-template-columns:1fr} }
-
-  .service-card{
-    background:var(--card);
-    border-radius:14px;
-    overflow:hidden;
-    box-shadow:0 8px 25px rgba(15,23,36,0.06);
-    transition:transform .55s cubic-bezier(.2,.9,.3,1), box-shadow .35s ease, filter .25s ease;
-    transform-origin:center;
-    border:1px solid rgba(0,0,0,0.03);
-    opacity:0;
-  }
-  /* initial offsets for left/right entry */
-  .service-card[data-anim="left"]{ transform: translateX(-70px) rotate(-6deg) scale(.98); }
-  .service-card[data-anim="right"]{ transform: translateX(70px) rotate(6deg) scale(.98); }
-  /* when visible */
-  .service-card.in-view{ opacity:1; transform: translateX(0) rotate(0) scale(1); }
-
-  .service-card:hover{
-    transform: translateY(-8px) scale(1.02);
-    box-shadow:0 20px 50px rgba(15,23,36,0.14);
-    outline: 4px solid rgba(243,107,33,0.08);
-  }
-  .service-thumb{height:220px;overflow:hidden}
-  .service-thumb img{width:100%;height:100%;object-fit:cover;display:block}
-  .service-body{padding:16px}
-  .service-body h4{margin:6px 0;color:var(--accent)}
-  .service-body p{color:var(--sub);line-height:1.6;font-size:0.98rem}
-
-  /* EVENTS */
-  .events{background:linear-gradient(180deg,#fff,#fff);border-radius:12px;padding:22px;box-shadow:0 10px 30px rgba(0,0,0,0.04)}
-  .events p{color:var(--sub);line-height:1.6}
-
-  /* GALLERY */
-  .gallery-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:14px}
-  .gallery-item{position:relative;overflow:hidden;border-radius:10px;background:#fafafa;box-shadow:0 8px 20px rgba(0,0,0,0.06)}
-  .gallery-item img{width:100%;height:220px;object-fit:cover;display:block;transition:transform .35s ease}
-  .gallery-item:hover img{transform:scale(1.05)}
-  .gallery-caption{position:absolute;left:10px;bottom:10px;background:rgba(0,0,0,0.5);color:white;padding:6px 10px;border-radius:6px;font-size:0.95rem}
-
-  .coming-soon{display:flex;align-items:center;justify-content:center;padding:28px;text-align:center;color:var(--sub);background:#fff6eb;height:220px}
-
-  /* LIGHTBOX (modal) */
-  .lightbox{
-    position:fixed;inset:0;background:rgba(0,0,0,0.8);display:flex;align-items:center;justify-content:center;z-index:2000;opacity:0;pointer-events:none;transition:opacity .25s ease;
-  }
-  .lightbox.show{opacity:1;pointer-events:auto}
-  .lightbox img{max-width:92%;max-height:86%;border-radius:10px;box-shadow:0 20px 60px rgba(0,0,0,0.6)}
-  .lightbox .caption{color:#fff;margin-top:12px;text-align:center;font-size:1rem}
-
-  /* BACK TO TOP */
-  #toTop{position:fixed;right:20px;bottom:22px;background:linear-gradient(45deg,var(--saffron-1),var(--saffron-2));border:none;color:white;padding:12px 14px;border-radius:50%;box-shadow:0 8px 20px rgba(0,0,0,0.2);cursor:pointer;display:none;z-index:1500}
-
-  /* footer */
-  footer.site-footer{padding:24px 0;text-align:center;background:linear-gradient(90deg,var(--saffron-1),var(--saffron-2));color:white;margin-top:28px}
-</style>
+    .sub-tagline {
+      font-size: 1.2rem;
+      margin: 5px 0;
+    }
+  </style>
 </head>
 <body>
 
-<!-- HEADER / NAV -->
-<header class="site-header">
-  <div class="wrap topbar">
-    <div class="brand-left">
-      <div class="logo-oval" aria-hidden="true">
-        <img src="images/logo.jpg" alt="Vathsalyam Logo" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2280%22 height=%2280%22><rect width=%2280%22 height=%2280%22 rx=%2240%22 fill=%22%23fff%22/><text x=%2240%22 y=%2248%22 font-size=%2228%22 text-anchor=%22middle%22 fill=%22%23f36b21%22 font-family=%22Merriweather,serif%22>V</text></svg>'">
-      </div>
-      <div class="brand-text">
-        <div class="title">VATHSALYAM</div>
-        <div class="small">Special School for Intellectual Children</div>
-        <div class="tiny">SevaBharathi's Special Project</div>
-      </div>
-    </div>
+<header>
+  <div class="logo">
+    <img src="images/logo.jpg" alt="School Logo">
+  </div>
+  <div class="header-text">
+    <h1 class="school-name">VATHSALYAM</h1>
+    <h2 class="tagline">Sevabharathi's Special Project</h2>
+    <p class="sub-tagline">Empowering Differently Abled Children</p>
+  </div>
+</header>
+
 
     <nav>
       <div class="hamburger" id="hamburgerBtn" aria-label="Toggle menu"><span></span><span></span><span></span></div>
@@ -410,5 +333,6 @@
 
 </body>
 </html>
+
 
 
