--- a/index.html
+++ b/index.html
@@ -61,16 +61,17 @@
 </head>
 <body>
 
-<header>
-  <div class="logo">
-    <img src="images/logo.jpg" alt="School Logo">
-  </div>
-  <div class="header-text">
-    <h1 class="school-name">VATHSALYAM</h1>
-    <h2 class="tagline">Sevabharathi's Special Project</h2>
-    <p class="sub-tagline">Empowering Differently Abled Children</p>
+<header style="background: linear-gradient(90deg, #FF9933 0%, #FFFFFF 50%, #138808 100%); padding: 10px 40px;">
+  <div style="display: flex; align-items: center; gap: 15px;">
+    <img src="images/logo.jpg" alt="School Logo" style="width: 80px; height: 80px; border-radius: 50%; border: 3px solid white; object-fit: cover; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
+    <div style="line-height: 1.1;">
+      <h1 style="font-size: 2.8rem; font-weight: 800; margin: 0; color: #000;">VATHSALYAM</h1>
+      <p style="font-size: 1.4rem; margin: 4px 0 2px; font-weight: 600; color: #000;">Special School for Intellectual Children</p>
+      <span style="font-size: 1rem; font-style: italic; color: #222;">A Special Project of Sevabharathi</span>
+    </div>
   </div>
 </header>
+
 
 <nav>
   <div class="hamburger" id="hamburgerBtn" aria-label="Toggle menu"><span></span><span></span><span></span></div>
@@ -329,6 +330,7 @@
 
 </body>
 </html>
+
 
 
 
